# USBDeviceLocker

./: CMakeLists.txt  README.md  main.cpp
SavedData/: usb_eject_log.txt  whitelist.txt
class/: main.h
defs/: AddToWhitelist.cpp  Ejection.cpp  Prompter.cpp  Scanner.cpp  WhitelistCheck.cpp
gui/: MainWindow.cpp  MainWindow.h
